--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "devStart": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -10,8 +10,9 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "mariadb": "^3.0.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.3"
+    "sequelize": "^6.21.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
