lots of amendments

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "flashcards",
+  "version": "0.1.0",
+  "private": true,
+  "description": "Backend for flashcards app",
   "scripts": {
     "dev": "nodemon server.js"
   },
