--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.1",
+    "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
     "sequelize": "^6.21.6"
   },
