--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "mariadb": "^3.0.1",
     "mongoose": "^6.6.5",
-    "morgan": "^1.10.0",
-    "sequelize": "^6.21.6"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
